--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@800&display=swap"
       rel="stylesheet"
     />
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <div class="container-fluid no-padding">
@@ -33,18 +35,28 @@
           <a href="#contest" class="menu-item">CUỘC THI ẨM THỰC</a>
           <a href="#game" class="menu-item">GAME CHALLENGE</a>
           <a href="#contact" class="menu-item">LIÊN HỆ</a>
+          <div class="sm-item d-flex flex-content-end">
+            <img src="./assets/images/bars-solid.svg" alt="" class="bar" />
+          </div>
+
+          <div class="sm-menu">
+            <a href="#home" class="sm-menu-item">CÓ SỢ RÌ</a>
+            <a href="#contest" class="sm-menu-item">CUỘC THI ẨM THỰC</a>
+            <a href="#game" class="sm-menu-item">GAME CHALLENGE</a>
+            <a href="#contact" class="sm-menu-item">LIÊN HỆ</a>
+          </div>
         </div>
       </div>
 
       <div
         id="home"
-        class="no-padding d-flex justify-content-center align-items-center"
+        class="no-padding d-flex justify-content-center align-items-center bg-home"
       >
         <img src="./assets/images/home.png" />
       </div>
 
       <div
-        class="position-relative d-flex justify-content-center align-items-center"
+        class="position-relative d-flex justify-content-center align-items-center bg-tvc"
       >
         <img src="./assets/images/tvc.png" />
 
@@ -60,12 +72,13 @@
         </div>
       </div>
 
-      <div class="d-flex justify-content-center align-items-center">
+      <div class="d-flex justify-content-center align-items-center bg-buy">
+        <div class="buy-overlay"></div>
         <div class="position-relative">
           <img src="./assets/images/introduction.png" />
           <div class="position-absolute buy-wrap">
             <a
-              href="https://shopee.vn/Kaimeidi-N%E1%BB%93i-C%C6%A1m-%C4%90i%E1%BB%87n-Mini-Th%C3%B4ng-Minh-%C4%90a-N%C4%83ng-Kh%C3%B4ng-D%C3%ADnh-i.619018936.23047740608?sp_atk=a869298b-492b-472e-902f-d2deb0ce533b&xptdk=a869298b-492b-472e-902f-d2deb0ce533b"
+              href="https://shopee.vn/N%E1%BB%93i-Chi%C3%AAn-Kh%C3%B4ng-D%E1%BA%A7u-4.7L-COSORI-CAF-L501-PRO-H%C3%A0ng-Ch%C3%ADnh-H%C3%A3ng-i.338323498.9977040992?xptdk=13cc60b5-d38e-4bda-8b6c-3867e0f681bb"
               target="_blank"
             >
               <button class="buy-button">MUA NGAY</button>
@@ -76,15 +89,18 @@
 
       <div
         id="contest"
-        class="d-flex justify-content-center align-items-center"
+        class="d-flex justify-content-center align-items-center bg-join"
       >
-        <img src="./assets/images/contest.png" />
+        <div class="join-overlay"></div>
+        <div class="position-relative">
+          <img src="./assets/images/contest.png" />
+        </div>
       </div>
 
       <div class="join d-flex justify-content-center align-items-center">
         <div>
           <a
-            href="https://shopee.vn/Kaimeidi-N%E1%BB%93i-C%C6%A1m-%C4%90i%E1%BB%87n-Mini-Th%C3%B4ng-Minh-%C4%90a-N%C4%83ng-Kh%C3%B4ng-D%C3%ADnh-i.619018936.23047740608?sp_atk=a869298b-492b-472e-902f-d2deb0ce533b&xptdk=a869298b-492b-472e-902f-d2deb0ce533b"
+            href="https://drive.google.com/file/d/1pL9FO0Z5-FWw5bq_88H8hA32NPc5ORi1/view?usp=sharing"
             target="_blank"
           >
             <button class="join-button">THAM GIA NGAY</button>
@@ -92,7 +108,10 @@
         </div>
       </div>
 
-      <div id="game" class="d-flex justify-content-center align-items-center">
+      <div
+        id="game"
+        class="d-flex justify-content-center align-items-center bg-game"
+      >
         <div class="position-relative">
           <img src="./assets/images/game.png" />
           <div class="position-absolute game-img-wrap">
@@ -103,7 +122,7 @@
           <div class="position-absolute share-button-wrap">
             <a
               class="text-decoration-none"
-              href="https://www.facebook.com/ngththao167"
+              href="https://www.facebook.com/"
               target="_blank"
             >
               <button
@@ -116,13 +135,13 @@
 
             <a
               class="text-decoration-none"
-              href="https://www.facebook.com/ngththao167"
+              href="https://www.tiktok.com/"
               target="_blank"
             >
               <button
                 class="share-button d-flex align-items-center mt-5 justify-content-center py-2"
               >
-                <div class="text me-2">CHIA SẺ VỚI BẠN BÈ</div>
+                <div class="text me-2">CHƠI TRÊN TIKTOK</div>
                 <img src="./assets/images/tiktok.svg" />
               </button>
             </a>
@@ -132,18 +151,58 @@
 
       <div
         id="contact"
-        class="d-flex justify-content-center align-items-center"
+        class="d-flex justify-content-center align-items-center bg-tvc"
       >
         <img src="./assets/images/contact.png" />
       </div>
 
-      <div class="d-flex justify-content-center align-items-center">
+      <a
+        class="d-flex justify-content-center contact-link bg-home"
+        href="https://www.facebook.com/"
+        target="_blank"
+      >
+        <img src="./assets/images/contact_link_fb.png" />
+      </a>
+
+      <div class="d-flex justify-content-center align-items-center bg-tvc">
         <img src="./assets/images/contact_fb.png" />
       </div>
+      <a
+        class="d-flex justify-content-center contact-link bg-home"
+        href="https://www.tiktok.com/"
+        target="_blank"
+      >
+        <img src="./assets/images/contact_link_tt.png" />
+      </a>
 
-      <div class="d-flex justify-content-center align-items-center">
+      <div class="d-flex justify-content-center align-items-center bg-tvc">
         <img src="./assets/images/contact_tt.png" />
       </div>
     </div>
   </body>
+
+  <script>
+    $(document).ready(function () {
+      $(".bar").click(function () {
+        $(".sm-menu").slideToggle();
+      });
+
+      $(".sm-menu-item").click(function () {
+        $(".sm-menu").slideUp();
+      });
+
+      $('a[href^="#"]').on("click", function (event) {
+        var target = $(this.getAttribute("href"));
+        if (target.length) {
+          event.preventDefault();
+          $("html, body").stop().animate(
+            {
+              scrollTop: target.offset().top,
+            },
+            800
+          );
+        }
+      });
+    });
+  </script>
 </html>
