--- a/index.html
+++ b/index.html
@@ -31,16 +31,20 @@
         <div
           class="menu d-flex justify-content-between align-items-center col-7 pe-5"
         >
-          <a href="#home" class="menu-item">CÓ SỢ RÌ</a>
+          <a href="#tvc" class="menu-item">CÓ SỢ RÌ</a>
           <a href="#contest" class="menu-item">CUỘC THI ẨM THỰC</a>
           <a href="#game" class="menu-item">GAME CHALLENGE</a>
           <a href="#contact" class="menu-item">LIÊN HỆ</a>
           <div class="sm-item d-flex flex-content-end">
-            <img src="./assets/images/bars-solid.svg" alt="" class="bar" />
+            <img
+              src="./assets/images/bars-solid.svg"
+              alt=""
+              class="bar mw-575"
+            />
           </div>
 
           <div class="sm-menu">
-            <a href="#home" class="sm-menu-item">CÓ SỢ RÌ</a>
+            <a href="#tvc" class="sm-menu-item">CÓ SỢ RÌ</a>
             <a href="#contest" class="sm-menu-item">CUỘC THI ẨM THỰC</a>
             <a href="#game" class="sm-menu-item">GAME CHALLENGE</a>
             <a href="#contact" class="sm-menu-item">LIÊN HỆ</a>
@@ -49,22 +53,23 @@
       </div>
 
       <div
-        id="home"
         class="no-padding d-flex justify-content-center align-items-center bg-home"
       >
-        <img src="./assets/images/home.png" />
+        <img class="mw-575" src="./assets/images/home.png" />
       </div>
 
       <div
+        id="tvc"
         class="position-relative d-flex justify-content-center align-items-center bg-tvc"
       >
-        <img src="./assets/images/tvc.png" />
+        <img class="mw-575 height-100" src="./assets/images/tvc.png" />
 
         <div class="video position-absolute">
           <video
             width="411"
             height="732"
             controls
+            poster="./assets/images/thumbnail.png"
             class="d-flex justify-content-center align-items-center"
           >
             <source src="./assets/images/tvc.mp4" type="video/mp4" />
@@ -75,7 +80,7 @@
       <div class="d-flex justify-content-center align-items-center bg-buy">
         <div class="buy-overlay"></div>
         <div class="position-relative">
-          <img src="./assets/images/introduction.png" />
+          <img class="mw-575" src="./assets/images/introduction.png" />
           <div class="position-absolute buy-wrap">
             <a
               href="https://shopee.vn/N%E1%BB%93i-Chi%C3%AAn-Kh%C3%B4ng-D%E1%BA%A7u-4.7L-COSORI-CAF-L501-PRO-H%C3%A0ng-Ch%C3%ADnh-H%C3%A3ng-i.338323498.9977040992?xptdk=13cc60b5-d38e-4bda-8b6c-3867e0f681bb"
@@ -93,7 +98,7 @@
       >
         <div class="join-overlay"></div>
         <div class="position-relative">
-          <img src="./assets/images/contest.png" />
+          <img class="mw-575" src="./assets/images/contest.png" />
         </div>
       </div>
 
@@ -113,9 +118,12 @@
         class="d-flex justify-content-center align-items-center bg-game"
       >
         <div class="position-relative">
-          <img src="./assets/images/game.png" />
+          <img class="mw-575" src="./assets/images/game.png" />
           <div class="position-absolute game-img-wrap">
-            <a href="https://gamevui.vn/" target="_blank">
+            <a
+              href="https://l.facebook.com/l.php?u=https%3A%2F%2Fliamm999.github.io%2FCosori%3Ffbclid%3DIwAR09S9cp-3HNxiJj1mYU2bmwwRJNH47ZX-ot5cCDnKURbmpg3dPuFW1HEXQ&h=AT0lIm4eLdlLY6c4eoTawinOhImOFSomUEwzlmZYlxGEDw8PG8mRosNQ5sbOKmcjemkTBzpNxNQuQEoZAbD35TIR4jDpw81vJMu1ZY4b7RwV0BmLuZGIK5iClzAiGd7UQnNl2Q"
+              target="_blank"
+            >
               <img class="game-img" src="./assets/images/game_link.png" />
             </a>
           </div>
@@ -126,10 +134,10 @@
               target="_blank"
             >
               <button
-                class="share-button d-flex align-items-center justify-content-center py-2"
+                class="share-button d-flex align-items-center justify-content-center py-3"
               >
                 <div class="text me-2">CHIA SẺ VỚI BẠN BÈ</div>
-                <img src="./assets/images/facebook.svg" />
+                <img class="mw-575" src="./assets/images/facebook.svg" />
               </button>
             </a>
 
@@ -139,10 +147,10 @@
               target="_blank"
             >
               <button
-                class="share-button d-flex align-items-center mt-5 justify-content-center py-2"
+                class="share-button d-flex align-items-center mt-5 justify-content-center py-3"
               >
-                <div class="text me-2">CHƠI TRÊN TIKTOK</div>
-                <img src="./assets/images/tiktok.svg" />
+                <div class="text me-2">TƯƠNG TÁC TRÊN TIKTOK</div>
+                <img class="mw-575" src="./assets/images/tiktok.svg" />
               </button>
             </a>
           </div>
@@ -153,7 +161,7 @@
         id="contact"
         class="d-flex justify-content-center align-items-center bg-tvc"
       >
-        <img src="./assets/images/contact.png" />
+        <img class="mw-575" src="./assets/images/contact.png" />
       </div>
 
       <a
@@ -161,22 +169,22 @@
         href="https://www.facebook.com/"
         target="_blank"
       >
-        <img src="./assets/images/contact_link_fb.png" />
+        <img class="mw-575" src="./assets/images/contact_link_fb.png" />
       </a>
 
       <div class="d-flex justify-content-center align-items-center bg-tvc">
-        <img src="./assets/images/contact_fb.png" />
+        <img class="mw-575" src="./assets/images/contact_fb.png" />
       </div>
       <a
         class="d-flex justify-content-center contact-link bg-home"
         href="https://www.tiktok.com/"
         target="_blank"
       >
-        <img src="./assets/images/contact_link_tt.png" />
+        <img class="mw-575" src="./assets/images/contact_link_tt.png" />
       </a>
 
       <div class="d-flex justify-content-center align-items-center bg-tvc">
-        <img src="./assets/images/contact_tt.png" />
+        <img class="mw-575" src="./assets/images/contact_tt.png" />
       </div>
     </div>
   </body>
